--- a/css/media.css
+++ b/css/media.css
@@ -1,5 +1,9 @@
 /* Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) {
+	.container-fluid {
+		padding-right: 15px;
+		padding-left: 15px;
+	}
 	.custom-navbar-brand svg {
 		width: 170px;
 	}
@@ -322,7 +326,7 @@
 	.save-search-float-section p {
 		font-size: 12px;
 	}
-	.modal-content {
+	.save-search-modal-content {
 		width: 300px;
 	}
 	.save-search-modal-body {
@@ -342,10 +346,26 @@
 	.custom-form-input {
 		width: 100%;
 	}
+	.search-page-left-content {
+		position: relative;
+		overflow: hidden;
+		left: 0;
+		margin-left: 0;
+	}
+	.city-search-result-content-map-mobile {
+		height: 300px;
+		width: 100%;
+		padding-left: 0;
+		padding-right: 0;
+	}
 }
 
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) and (max-width: 767.98px) {
+	.container-fluid {
+		padding-right: 20px;
+		padding-left: 20px;
+	}
 	.city-page-banner {
 		padding: 250px 0;
 		padding-bottom: 50px;
@@ -548,7 +568,7 @@
 	.search-page-result-image img {
 		width: 95%;
 	}
-	.modal-content {
+	.save-search-modal-content {
 		width: 650px;
 	}
 	.save-search-float-section {
@@ -565,9 +585,23 @@
     	text-overflow: ellipsis;
     	width: 200px!important;
 	}
+	.search-page-left-content {
+		margin-left: 0;
+	}
+	.search-page-card-title {
+		width: 90%;
+	}
+	.city-search-result-content-map {
+	    padding-left: 0;
+	    padding-right: 0;
+	}
 }
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 991.98px) {
+	.container-fluid {
+		padding-left: 15px;
+		padding-right: 15px;
+	}
 	.city-page-banner {
 		padding: 250px 0;
 		padding-bottom: 50px;
@@ -734,10 +768,13 @@
 	    font-size: 40px;
 	}
 	.city-search-result-content {
-		margin-top: 30px;
+		margin-top: 10px;
+	}
+	.search-page-result {
+		height: 68%;
 	}
 	.search-page-result-image img {
-		height: 150px;
+		height: auto;
 	}
 	.search-page-city-content .card-title {
 		white-space: nowrap;
@@ -775,7 +812,7 @@
 	.save-search-float-section p {
 		font-size: 12px;
 	}
-	.modal-content {
+	.save-search-modal-content {
 		width: 700px;
 	}
 	.save-search-modal-body {
@@ -788,6 +825,23 @@
     	overflow: hidden;
     	text-overflow: ellipsis;
     	width: 120px!important;
+	}
+	.search-page-left-content {
+		margin-left: 0;
+	}
+	.search-page-city-content {
+	    margin-top: 0px;
+	    width: 100%;
+	}
+	.city-search-result-content-map {
+	    padding-left: 0;
+	    padding-right: 0;
+	    height: 100%;
+	}
+	.search-page-result {
+		height: 100%;
+		width: 100%;
+		position: relative;
 	}
 }
 
@@ -882,8 +936,19 @@
 	.calculation-type-name {
 		font-size: 12px;
 	}
+	.search-page-city-content {
+		margin-top: 15px;
+		width: 98%;
+	}
+	.search-page-left-content {
+		margin-left: 25px;
+	}
 	.footer-social-icon ul:nth-child(2) li {
 		margin-right: 30px;
+	}
+	.city-search-result-content-map {
+	    padding-left: 0;
+	    padding-right: 0;
 	}
 }
 
