--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 html, body {
 	overflow-x: hidden;
 	font-family: 'Manrope', sans-serif;
+	height: 100%;
 }
 * {
 	margin: 0;
@@ -25,6 +26,10 @@ a {
 }
 a:hover {
 	text-decoration: none;
+}
+.container-fluid {
+	padding-right: 40px;
+	padding-left: 40px;
 }
 /*Text Color Elements Here*/
 .cyan-color {
@@ -1273,12 +1278,10 @@ header {
 }
 .city-search-filter-select>button.btn-light.dropdown-toggle {
 	color: #192125!important;
-	width: 100px;
 	font-size: 10px;
 	font-weight: 700!important;
 	line-height: 13.66px;
 	letter-spacing: .5px;
-	margin-left: 40px;
 	margin-top: -2px;
 }
 .city-search-select.show >.btn-light.dropdown-toggle, .city-search-select >.btn-light.dropdown-toggle:focus {
@@ -1402,21 +1405,158 @@ div.custom-control-right .custom-control-label::before {
 }
 /*City Search Result Section Ends Here*/
 /*Search Results Page Section Starts Here*/
+/*Search Page Filter Styling*/
+.btn-filter {
+	background-color: #fff;
+	padding-right: 16px;
+	padding-top: 10px;
+	font-size: 10px;
+	line-height: 16px;
+	font-weight: 500;
+	margin-right: 10px;
+	color: #393F3E;
+	text-align: left;
+	border: none;
+	width: 80px;
+	position: relative;
+}
+.btn-filter span {
+	position: absolute;
+	right: 0;
+	top: 45%;
+	bottom: 0;
+	margin: auto;
+	font-weight: 800;
+}
+.filter-right-border {
+	border-right: 1px solid #D8D8D4!important;
+}
+.filter-modal-header button {
+	outline: none;
+	border: none;
+}
+.filter-modal-header span {
+	font-size: 14px;
+}
+.filter-modal-dialogue .modal-content {
+	width: auto;
+}
+.filter-modal-dialogue .modal-content input {
+	width: 25%;
+	text-align: left;
+	background-color: #fff;
+	border: none;
+	font-size: 14px;
+	font-weight: 600;
+}
+.filter-modal-dialogue .modal-header .modal-title {
+	text-align: center;
+	margin: auto;
+	font-size: 14px;
+	font-weight: 400;
+}
+.filter-modal-body {
+	padding-left: 20px;
+	padding-right: 20px;
+	height: 500px;
+	overflow-y: auto;
+}
+.filter-modal-body label {
+	font-size: 10px;
+	font-weight: 700;
+}
+/* The container */
+.filter-check-container {
+  	display: block;
+  	position: relative;
+  	padding-left: 35px;
+  	margin-bottom: 12px;
+  	cursor: pointer;
+  	font-weight: 500!important;
+  	-webkit-user-select: none;
+  	-moz-user-select: none;
+  	-ms-user-select: none;
+  	user-select: none;
+  	font-size: 12px!important;
+}
+/* Hide the browser's default checkbox */
+.filter-check-container input {
+	position: absolute;
+	opacity: 0;
+	cursor: pointer;
+	height: 0;
+	width: 0;
+}
+/* Create a custom checkbox */
+.checkmark {
+    position: absolute;
+    top: -4px;
+    left: 0;
+    height: 23px;
+    width: 23px;
+    background-color: #fff;
+	border: 2px solid #D8D8D4;
+	box-sizing: border-box;
+	box-shadow: 0px 2px 2px rgba(218, 227, 225, 0.1), inset 0px -1px 1px rgba(218, 227, 225, 0.15);
+	border-radius: 4px;
+}
+/* On mouse-over, add a grey background color */
+.filter-check-container:hover input ~ .checkmark {
+  	background-color: #fff;
+  	border-color: #18bc9c;
+}
+/* When the checkbox is checked, add a blue background */
+.filter-check-container input:checked ~ .checkmark {
+  	background-color: #18bc9c;
+}
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+ 	content: "";
+ 	position: absolute;
+ 	display: none;
+}
+/* Show the checkmark when checked */
+.filter-check-container input:checked ~ .checkmark:after {
+ 	display: block;
+}
+/* Style the checkmark/indicator */
+.filter-check-container .checkmark:after {
+	left: 7px;
+	top: 4px;
+	width: 5px;
+	height: 10px;
+	border: solid white;
+	border-width: 0 2px 2px 0;
+	-webkit-transform: rotate(45deg);
+	-ms-transform: rotate(45deg);
+	transform: rotate(45deg);
+}
+/*Search Page Filter Styling*/
  a.mapboxgl-ctrl-logo {
 	display: none;
 }
 .mapboxgl-ctrl.mapboxgl-ctrl-attrib {
     display: none;
 }
+.search-page-result {
+	height: 80vh;
+	width: 100%;
+	position: relative;
+}
 .search-page-left-content {
+	position: absolute;
+	overflow-x: hidden;
+	left: 0;
+	top: 0;
+	margin-left: 40px;
+	height: 100%;
 	overflow-y: auto;
-	height: 1000px;
-	overflow-x: hidden; 
 }
 .search-page-city-content {
 	border-bottom: 1px solid #EAEAE7;
 	padding-bottom: 10px;
 	margin-top: 20px;
+	width: 95%;
 	position: relative;
 }
 .search-page-city-content-layout-2 {
@@ -1428,10 +1568,18 @@ div.custom-control-right .custom-control-label::before {
 }
 .card-above-title-text {
 	font-weight: 500;
-	font-size: 12px;
+	font-size: 12px!important;
 	line-height: 16px;
 	color: #747978;
+	margin-top: 20px;
 	margin-bottom: 10px;
+}
+.search-page-card-title {
+	font-size: 16px;
+	width: 70%;
+}
+.search-page-card-below-text {
+	font-size: 12px!important;
 }
 .card-online-bookable-mark {
 	font-size: 12px;
@@ -1459,6 +1607,9 @@ div.custom-control-right .custom-control-label::before {
 	font-weight: 500;
 	color: #18BC9C;
 }
+.search-page-rating-text p {
+	font-size: 12px!important;
+}
 .search-page-result-price {
 	border-top: 1px solid #EAEAE7;
 	padding-top: 20px;
@@ -1474,7 +1625,7 @@ div.custom-control-right .custom-control-label::before {
 	padding: 20px 20px 20px 30px;
 	background-color: #fff;
 	position: sticky;
-	bottom: 20px;
+	bottom: 2%;
 	left: 0;
 	width: 97%;
 	margin-top: 40px;
@@ -1510,7 +1661,7 @@ div.custom-control-right .custom-control-label::before {
 }
 /*Save Search Floating Section Here*/
 /*Save Search Modal Box*/
-.modal-content {
+.save-search-modal-content {
 	border-radius: 4px;
 	width: 800px;
 }
@@ -1576,6 +1727,19 @@ div.custom-control-right .custom-control-label::before {
 }
 .save-search-modal-body input::placeholder {
 	color: #BABDB7;
+}
+.city-search-result-content-map {
+	height: 100%;
+	width: 100%;
+	position: absolute;
+	right: 0;
+	top: 0;
+	padding-left: 0;
+	padding-right: 0;
+}
+.mapboxgl-canvas:focus {
+    border: none;
+    outline: none;
 }
 /* The container */
 .check-container {
