--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ header {
 }
 .header-border {
 	border-bottom: 1px solid #EAEAE7;
-	padding-bottom: 20px;
+	padding-bottom: 12px;
 }
 .navbar {
 	padding-left: 0;
@@ -1786,27 +1786,720 @@ div.custom-control-right .custom-control-label::before {
 }
 /* Create the checkmark/indicator (hidden when not checked) */
 .checkmark:after {
-  content: "";
-  position: absolute;
-  display: none;
+	content: "";
+	position: absolute;
+	display: none;
 }
 /* Show the checkmark when checked */
 .check-container input:checked ~ .checkmark:after {
-  display: block;
+	display: block;
 }
 /* Style the checkmark/indicator */
 .check-container .checkmark:after {
-  left: 7px;
-  top: 4px;
-  width: 5px;
-  height: 10px;
-  border: solid white;
-  border-width: 0 2px 2px 0;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
+	left: 7px;
+	top: 4px;
+	width: 5px;
+	height: 10px;
+	border: solid white;
+	border-width: 0 2px 2px 0;
+	-webkit-transform: rotate(45deg);
+	-ms-transform: rotate(45deg);
+	transform: rotate(45deg);
 }
 /*Save Search Modal Box*/
+/*Listing Page Styling Section Starts Here*/
+.listing-page-main-title {
+	padding-top: 50px;
+	padding-bottom: 30px;
+}
+.listing-page-image-gallery-section img {
+	border-radius: 4px;
+}
+.listing-page-main-title h2 {
+	font-weight: 800;
+	font-size: 40px;
+	line-height: 48px;
+	color: #393F3E;
+	margin-bottom: 15px;
+}
+.listing-page-rating-text p {
+	font-size: 16px!important;
+}
+.listing-page-rating-text p:first-child span {
+	color: #00CC99;
+}
+.online-bookable-mark {
+	font-size: 12px;
+	line-height: 16px;
+	font-weight: 700;
+	color: #18BC9C;
+	text-align: center;
+	border-radius: 4px;
+	background-color: #E4F4F1;
+	padding: 5px 7px;
+}
+.top-pick-mark {
+	font-size: 12px;
+	line-height: 16px;
+	font-weight: 700;
+	color: #EC1B40;
+	text-align: center;
+	border-radius: 4px;
+	background-color: #F6E9EB;
+	padding: 5px 7px;
+}
+.custom-carousel-indicators li {
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    margin-right: 5px;
+    margin-left: 5px;
+    opacity: .5;
+}
+.carousel-control-next, .carousel-control-prev {
+    border-radius: 4px;
+    opacity: 0;
+}
+.carousel-control-next:hover {
+	background: linear-gradient(270deg, rgba(0, 0, 0, 0.6) 0%, rgba(57, 63, 62, 0) 100%);
+	opacity: 1;
+}
+.carousel-control-prev:hover {
+	background: linear-gradient(90deg, rgba(0, 0, 0, 0.6) 0%, rgba(57, 63, 62, 0) 100%);
+	opacity: 1;
+}
+.listing-page-more-image-overlay {
+    position: absolute;
+    top: 25px;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: 0 auto;
+    width: 100%;
+    margin-left: 0px;
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, .5)!important;
+    z-index: 99!important;
+}
+.listing-page-more-photos-overlay-wrap img {
+    border-radius: 4px;
+    margin-top: 25px;
+}
+.listing-page-more-photos-overlay-wrap p {
+    position: absolute;
+    top: 50%;
+    left: 45%;
+    color: #fff;
+    font-size: 24px;
+    margin: auto;
+    vertical-align: middle;
+    line-height: 24px;
+    font-weight: 700;
+    z-index: 999!important;
+}
+/*Listing Page Styling Section Ends Here*/
+/*Listing Page Main Content Section Starts Here*/
+.listing-page-main-content-section {
+	padding-top: 20px;
+}
+.listing-page-left-content h4 {
+	font-weight: 700;
+	font-size: 18px;
+	line-height: 24px;
+	color: #747978;
+	padding-bottom: 15px;
+	border-bottom: 1px solid #EAEAE7;
+}
+.listing-page-description {
+	padding: 40px 0;
+	border-bottom: 1px solid #EAEAE7;
+}
+.listing-page-description h6 {
+	font-weight: 800;
+	font-size: 12px;
+	line-height: 16px;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	color: #393F3E;
+	margin-bottom: 10px;
+}
+.listing-page-description p {
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 24px;
+	color: #747978;
+	width: 90%;
+}
+.listing-page-space-feature {
+	padding: 40px 0;
+	border-bottom: 1px solid #EAEAE7;
+}
+.listing-page-space-feature h6 {
+	font-weight: 800;
+	font-size: 12px;
+	line-height: 16px;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	color: #393F3E;
+	margin-bottom: 50px;
+}
+.feature-collapse-btn-section {
+	margin-top: 50px;
+}
+.feature-collapse-button {
+	font-weight: 800;
+	font-size: 14px;
+	line-height: 19px;
+	color: #18BC9C;
+}
+.feature-collapse-button:hover {
+	text-decoration-line: underline;
+	color: #18BC9C;
+}
+.features-icon-list {
+	padding-top: 12px;
+	padding-bottom: 12px;
+}
+.listing-page-space-feature span {
+	font-size: 18px;
+	color: #18BC9C;
+	padding: 14px;
+	height: 48px;
+	width: 48px;
+	border-radius: 4px;
+	background-color: #E4F4F1;
+}
+.listing-page-space-feature h5 {
+	font-weight: 800;
+	font-size: 16px;
+	line-height: 22px;
+	display: flex;
+	align-items: center;
+	color: #393F3E;
+}
+.listing-page-availability-calendar {
+	padding: 40px 0;
+	border-bottom: 1px solid #EAEAE7;
+}
+.listing-page-availability-calendar h6 {
+	font-weight: 800;
+	font-size: 12px;
+	line-height: 16px;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	color: #393F3E;
+	margin-bottom: 50px;
+}
+.listing-page-availability-calendar h6 span {
+	font-size: 10px;
+	line-height: 14px;
+	letter-spacing: 0.5px;
+	text-transform: uppercase;
+	color: #747978;
+}
+.listing-page-availability-calendar h6 span span {
+	height: 8px;
+	width: 8px;
+	background-color: #18BC9C;
+	display: inline-block;
+	border-radius: 50%;
+	margin-right: 10px;
+}
+.listing-page-month-bars ul li span {
+	background: #EAEAE7;
+	border-radius: 8px;
+	display: block;
+	width: 56px;
+	height: 53px;
+	margin: 3px;
+	border-bottom-right-radius: 0;
+	border-bottom-left-radius: 0;
+}
+.listing-page-month-bars ul li span.random {
+	background: #EAEAE7;
+	border-radius: 8px;
+	display: block;
+	width: 56px;
+	height: 33px;
+	margin: 3px;
+	border-bottom-right-radius: 0;
+	border-bottom-left-radius: 0;
+}
+.listing-page-month-bars ul li span.active {
+	background: #18BC9C;
+	border-radius: 8px;
+	display: block;
+	width: 56px;
+	height: 23px;
+	margin: 3px;
+	border-bottom-right-radius: 0;
+	border-bottom-left-radius: 0;
+}
+.listing-page-month-bars ul li h6 {
+	font-weight: bold;
+	font-size: 14px;
+	line-height: 24px;
+	margin-top: 8px;
+	text-align: center;
+	color: #393F3E;
+	text-transform: capitalize;
+}
+/*Calendar Portion*/
+.listing-page-calendar {
+	background: #FFFFFF;
+	border: 1px solid #EAEAE7;
+	box-sizing: border-box;
+	box-shadow: 0px 2px 2px rgba(218, 227, 225, 0.1), inset 0px -1px 1px rgba(218, 227, 225, 0.15);
+	border-radius: 4px;
+	padding: 40px 20px;
+}
+.calendar-section {
+	margin-bottom: 20px;
+}
+.calendar, .calendar_weekdays,
+.calendar_content {
+	max-width: 260px;
+}
+.calendar-first {
+	margin-right: 60px;
+}
+.calendar {
+  /*float: left;*/
+  margin: auto;
+  min-width: 220px;
+}
+.calendar_weekdays {
+	color: #aaa;
+	font-weight: lighter;
+}
+.calendar_weekdays div {
+	display:inline-block;
+	vertical-align:top;
+}
+.calendar_content, .calendar_weekdays, .calendar_header {
+	position: relative;
+}
+.calendar_content:after, .calendar_weekdays:after, .calendar_header:after {
+	content: ' ';
+	display: table;
+	clear: both;
+}
+.calendar_weekdays div, .calendar_content div {
+  /*border: 1px dotted #999;*/
+	width: 14.28571%; 
+	overflow: hidden;
+	background-color: transparent;
+	font-weight: 500;
+	font-size: 12px;
+	line-height: 16px;
+	text-align: center;
+	color: #747978;
+	margin-top: 30px;
+	margin-bottom: 20px;
+}
+.calendar_content .today {
+	color: #3B8FC7;
+}
+.calendar_content div {
+	float: left;
+	margin-left: 7px;
+	margin-top: 7px;
+	margin-bottom: 0;
+	border: 1px solid transparent;
+	background-color: #E4F4F1;
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 16px;
+	padding-top: 7px;
+	width: 30px;
+	height: 30px;
+	border-radius: 4px;
+	color: #393F3E;
+	text-align: center;
+}
+.calendar_content div:hover {
+	border: 1px solid #777;
+ 	cursor: pointer;
+}
+.calendar_content div.blank:hover {
+	cursor: default;
+	border: none;
+}
+.calendar_content div.past-date {
+	cursor: initial;
+  color: #d5d5d5;
+  background-color: #fff;
+}
+.calendar_content div.today{
+	border: 1px solid #18BC9C;
+	color: #393F3E;
+}
+.calendar_content div.selected {
+  background-color: rgba(153, 153, 161, .2); /*rgba(170, 170, 176, .5) #aaaab0*/
+  border: 1px solid white;
+}
+.calendar_header {
+  width: 100%;
+  text-align: center;
+}
+.calendar_header h2 {
+	float:left;
+	width: 85%;
+	margin-top: 5px;
+	padding: 0 10px;
+	font-weight: 700;
+	font-size: 14px;
+}
+button.switch-month {
+	outline: none;
+	border: none;
+	padding: 4px;
+	font-size: 10px;
+	float: left;
+	width: 10%;
+	transition: color .2s;
+	background: #FFFFFF;
+	color: #9AA09E;
+	border: 1px solid #D8D8D4;
+	box-sizing: border-box;
+	box-shadow: 0px 2px 2px rgba(218, 227, 225, 0.1), inset 0px -1px 1px rgba(218, 227, 225, 0.15);
+	border-radius: 4px;
+}
+button.switch-month:hover {
+  color: #5EADE2;
+}
+button.switch-month:active {
+  background-color: rgba(113, 113, 125, .4);
+}
+.calendar_header h2 {
+  color: #393F3E;
+  line-height: 16px;
+  font-weight: 700;
+}
+.calendar_content .blank {
+	display: none!important;
+}
+/*Calendar Portion*/
+.listing-page-calendar-legend {
+	margin-top: 32px;
+}
+.listing-page-calendar-legend ul li span {
+	font-size: 10px;
+	line-height: 14px;
+	letter-spacing: 0.5px;
+	text-transform: uppercase;
+	color: #747978;
+}
+.listing-page-calendar-legend ul li span span {
+	height: 8px;
+	width: 8px;
+	background-color: #18BC9C;
+	display: inline-block;
+	border-radius: 50%;
+	margin-right: 10px;
+}
+.listing-page-house-rules {
+	padding: 40px 0;
+	border-bottom: 1px solid #EAEAE7;
+}
+.listing-page-house-rules h6 {
+	font-weight: 800;
+	font-size: 12px;
+	line-height: 16px;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	color: #393F3E;
+	margin-bottom: 50px;
+}
+.listing-page-house-rules-left {
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 24px;
+	color: #747978;
+}
+.listing-page-house-rules-right {
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 24px;
+	color: #393F3E;
+}
+.listing-page-downloads {
+	padding: 40px 0;
+	border-bottom: 1px solid #EAEAE7;
+}
+.listing-page-downloads h6 {
+	font-weight: 800;
+	font-size: 12px;
+	line-height: 16px;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	color: #393F3E;
+	margin-bottom: 50px;
+}
+.listing-page-downloads-left {
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 24px;
+	color: #747978;
+}
+.listing-page-downloads-right {
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 24px;
+	color: #393F3E;
+}
+.download-file-size {
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 24px;
+	color: #BABDB7;
+}
+.listing-page-city-rules {
+	padding: 40px 0;
+	border-bottom: 1px solid #EAEAE7;
+}
+.listing-page-city-rules h6 {
+	font-weight: 800;
+	font-size: 12px;
+	line-height: 16px;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	color: #393F3E;
+	margin-bottom: 50px;
+}
+.listing-page-accordion-card {
+	border: 1px solid #D8D8D4;
+	box-sizing: border-box;
+	border-radius: 4px;
+	padding: 10px 24px;
+	margin-bottom: 8px;
+}
+.listing-page-accordion-btn {
+	border-radius: 4px;
+}
+.listing-page-accordion-btn:hover, .listing-page-accordion-btn[aria-expanded="true"]  {
+	font-size: 16px;
+	font-weight: 600;
+	line-height: 22px;
+	letter-spacing: 0px;
+	padding-left: 0!important;
+	background-color: #fff;
+	text-decoration: none;
+	border: none;
+	box-shadow: none!important;
+	outline: none!important;
+	color: #393F3E!important;
+}
+.listing-page-accordion-btn:after {
+	position: absolute;
+	top: 30px;
+	right: 24px;
+	content: url('../images/caret-down.svg');
+	display: block;
+	color: #C5CDCB;
+}
+.listing-page-accordion-btn[aria-expanded="true"]:after {
+	position: absolute;
+	top: 30px;
+	right: 24px;
+	transform: rotate(180deg);
+	content: url('../images/caret-down.svg');
+	display: block;
+	color: #C5CDCB;
+}
+.listing-page-description {
+	width: 100%;
+	height: 100%;
+}
+/*Listing Page Right Contents*/
+.listing-page-booking-request-box {
+	background: #F9F9F8;
+	border: 1px solid #EAEAE7;
+	box-sizing: border-box;
+	border-radius: 4px;
+	padding: 22px 35px 35px 35px;
+}
+.listing-booking-request-left-content p {
+	font-size: 14px;
+	line-height: 24px;
+	color: #747978;
+	font-weight: 700;
+}
+.listing-booking-request-right-content p {
+	font-size: 14px;
+	line-height: 24px;
+	text-align: right;
+	color: #393F3E;
+	font-weight: 700;
+}
+.listing-page-booking-form label {
+	font-size: 12px;
+	font-weight: 700;
+	line-height: 16px;
+	letter-spacing: 0.5px;
+	text-transform: uppercase;
+	color: #747978;
+}
+.listing-page-booking-form .form-group {
+	position: relative;
+}
+.listing-page-booking-form .form-group input, .listing-page-booking-form .input-group input:focus, .listing-page-booking-form .input-group input:active {
+	border: 1px solid #D8D8D4;
+	box-sizing: border-box;
+	box-shadow: 0px 2px 2px rgba(218, 227, 225, 0.1), inset 0px -1px 1px rgba(218, 227, 225, 0.15);
+	border-radius: 4px;
+	font-size: 12px;
+	font-weight: 700;
+	line-height: 16px;
+	color: #393F3E;
+	height: 40px;
+	display: block!important;
+}
+.listing-page-booking-form .form-group span {
+	position: absolute;
+	right: 20px;
+    top: 10px;
+    color: #9AA09E;
+}
+.listing-page-booking-form .form-group small {
+	font-weight: 300;
+	font-size: 12px;
+	line-height: 24px;
+	color: #393F3E;
+}
+.listing-booking-collapse-btn {
+	font-weight: 600;
+	font-size: 12px;
+	line-height: 16px;
+	color: #9AA09E;
+}
+.listing-booking-collapse-btn span {
+	color: #747978;
+}
+.listing-booking-collapse-btn:hover, .listing-booking-collapse-btn:focus {
+	color: #9AA09E;
+}
+.custom-booking-card-body {
+	background: #fff;
+	border: 1px solid #D8D8D4;
+	box-sizing: border-box;
+	box-shadow: 0px 2px 2px rgba(218, 227, 225, 0.1), inset 0px -1px 1px rgba(218, 227, 225, 0.15);
+	border-radius: 4px;
+	padding: 0 10px;
+}
+.listing-booking-collapse-left-content p {
+	font-weight: 500;
+	font-size: 12px;
+	line-height: 24px;
+	color: #393F3E;
+	margin: 10px 0;
+}
+.listing-booking-collapse-left-content p a {
+	font-size: 12px;
+	color: #393F3E;
+}
+.listing-booking-collapse-right-content p {
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 24px;
+	color: #393F3E;
+	margin: 10px 0;
+}
+.bottom-border-styling {
+	border-bottom: 1px solid #EAEAE7;
+}
+.listing-page-right-generic-box {
+	border: 1px solid #EAEAE7;
+	box-sizing: border-box;
+	border-radius: 4px;
+	padding: 22px 35px 35px 35px;
+}
+.listing-page-right-content-card {
+	background: ;
+	border: 1px solid #EAEAE7;
+	box-sizing: border-box;
+	border-radius: 4px;
+}
+.listing-page-right-content-card-header {
+	background-color: #F9F9F8;
+	padding: 22px 35px 10px 35px;
+}
+.listing-page-right-content-card-header h6 {
+	font-weight: 700;
+	font-size: 12px;
+	line-height: 16px;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	color: #393F3E;
+}
+.listing-page-right-content-card-body {
+	padding: 22px 5px 10px 35px;
+}
+.listing-page-right-content-card-body p {
+	font-weight: 500;
+	font-size: 12px;
+	line-height: 16px;
+	color: #393F3E;
+}
+.listing-page-right-content-card-body p span {
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 24px;
+	align-items: center;
+	text-align: center;
+	color: #393F3E;
+	border: 1px solid #D8D8D4;
+	padding: 5px 10px;
+	border-radius: 50%;
+}
+.listing-page-right-content-card-body h5 {
+	font-weight: 800;
+	font-size: 14px;
+	line-height: 24px;
+	color: #393F3E;
+	margin-bottom: 5px;
+	margin-top: 5px;
+}
+.contact-landlord-rating p {
+	font-weight: 800;
+	font-size: 16px;
+	line-height: 22px;
+	display: flex;
+	align-items: center;
+	color: #393F3E;
+}
+.contact-landlord-rating p span {
+	border: none;
+	font-size: 20px;
+	font-weight: 400;
+}
+.contact-landlord-rating p span.total-rating-vote-count {
+	border: none;
+	font-size: 16px;
+	font-weight: 300;
+	color: #393F3E;
+}
+.listing-page-popover-content {
+	display: none;
+	width: 300px;
+}
+.popover-body {
+	width: 225px;
+	font-weight: 400;
+	font-size: 12px;
+}
+/*Listing Page Main Content Section Ends Here*/
+/*Booking Page Styling Section Starts Here*/
+.booking-page-title-section {
+	padding: 60px 0;
+}
+.booking-page-title-section h2 {
+	font-weight: 800;
+	font-size: 56px;
+	line-height: 64px;
+	color: #393F3E;
+}
+/*Booking Page Styling Section Ends Here*/
 /*Footer Section Starts Here*/
 footer {
 	background-color: #393F3E;
