--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ html, body {
 	overflow-x: hidden;
 	font-family: 'Manrope', sans-serif;
 	height: 100%;
+	scroll-behavior: smooth;
 }
 * {
 	margin: 0;
@@ -1538,6 +1539,10 @@ div.custom-control-right .custom-control-label::before {
 .mapboxgl-ctrl.mapboxgl-ctrl-attrib {
     display: none;
 }
+.for-padding-24 {
+	padding-top: 24px;
+	padding-bottom: 24px;
+}
 .search-page-result {
 	height: 80vh;
 	width: 100%;
@@ -2490,6 +2495,9 @@ button.switch-month:active {
 }
 /*Listing Page Main Content Section Ends Here*/
 /*Booking Page Styling Section Starts Here*/
+.booking-page-company-entry-area {
+	padding-top: 48px;
+}
 .booking-page-title-section {
 	padding: 60px 0;
 }
@@ -2499,6 +2507,398 @@ button.switch-month:active {
 	line-height: 64px;
 	color: #393F3E;
 }
+/*Booking Page Left Content Starts*/
+.booking-page-left-content h4 {
+	font-weight: 800;
+	font-size: 20px;
+	line-height: 27px;
+	color: #393F3E;
+	margin-bottom: 20px;
+}
+.booking-page-card-content {
+	border: 1px solid #EAEAE7;
+	box-sizing: border-box;
+	box-shadow: 0px 2px 2px rgba(218, 227, 225, 0.1), inset 0px -1px 1px rgba(218, 227, 225, 0.15);
+	border-radius: 4px;
+	padding: 16px;
+}
+.booking-page-card-content img {
+	border-radius: 4px;
+}
+.booking-page-card-body {
+	padding: 20px 30px;
+}
+.booking-page-card-body h4 {
+	font-weight: 800;
+	font-size: 20px;
+	line-height: 27px;
+	color: #393F3E;
+}
+.booking-page-card-body h6 {
+	font-weight: 600;
+	font-size: 16px;
+	line-height: 22px;
+	color: #747978;
+}
+.booking-page-card-body h5 {
+	font-weight: 600;
+	font-size: 16px;
+	line-height: 24px;
+	text-align: right;
+	color: #393F3E;
+}
+.booking-page-card-body h5 a span {
+	color: #747978;
+}
+.booking-page-card-body h5 a {
+	color: #18BC9C;
+}
+.booking-page-total-price {
+	font-weight: 700!important;
+	font-size: 24px!important;
+	line-height: 24px;
+	text-align: right;
+	color: #393F3E;
+}
+.booking-page-navbar-area .nav li {
+	width: 33%;
+}
+.booking-page-navbar-area .nav li a.nav-link {
+	font-weight: 800;
+	font-size: 14px;
+	line-height: 19px;
+	text-align: center;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	color: #9AA09E;
+	padding-bottom: 24px;
+	border-top: none;
+	border-left: none;
+	border-right: none;
+	border-bottom: 2px solid #EAEAE7;
+	width: 100%;
+	height: 100%;
+}
+.booking-page-navbar-area .nav li a.nav-link.active {
+	border-top: none;
+	border-left: none;
+	border-right: none;
+	border-bottom: 2px solid #18BC9C;
+	color: #393F3E;
+}
+.booking-page-company-entry-area {
+	padding-bottom: 100px;
+}
+.booking-page-user-login-option {
+	margin-bottom: 35px;
+}
+.booking-page-user-login-option h4 {
+	font-weight: 600;
+	font-size: 16px;
+	line-height: 24px;
+	color: #393F3E;
+}
+.booking-page-user-login-option h4 a {
+	color: #18BC9C;
+}
+.booking-page-form-title {
+	margin-bottom: 30px;
+}
+.booking-page-form-title h3 {
+	font-weight: 800;
+	font-size: 20px;
+	line-height: 27px;
+	color: #393F3E;
+}
+.booking-page-form .form-row {
+	margin: 10px 0;
+}
+.booking-page-form label {
+	font-weight: 800;
+	font-size: 12px;
+	line-height: 16px;
+	text-transform: uppercase;
+	color: #747978;
+}
+.booking-page-form input, .apply-coupon-modal-body input {
+	background: #FFFFFF;
+	border: 1px solid #D8D8D4;
+	box-sizing: border-box;
+	box-shadow: 0px 2px 2px rgba(218, 227, 225, 0.1), inset 0px -1px 1px rgba(218, 227, 225, 0.15);
+	border-radius: 4px;
+	font-weight: 500;
+	font-size: 12px;
+	line-height: 16px;
+	padding: 12px 0 12px 12px;
+	height: 40px;
+}
+.booking-page-form textarea {
+	background: #FFFFFF;
+	border: 1px solid #D8D8D4;
+	box-sizing: border-box;
+	box-shadow: 0px 2px 2px rgba(218, 227, 225, 0.1), inset 0px -1px 1px rgba(218, 227, 225, 0.15);
+	border-radius: 4px;
+	font-weight: 500;
+	font-size: 12px;
+	line-height: 16px;
+	padding: 12px 0 12px 12px;
+}
+.booking-page-form input:focus, .apply-coupon-modal-body input:focus, .apply-coupon-modal-body input:active, .booking-page-form textarea:focus {
+	background: #FFFFFF;
+	border: 1px solid #18BC9C;
+	box-shadow: none;
+}
+.booking-page-form input::placeholder, .apply-coupon-modal-body input::placeholder, .booking-page-form textarea::placeholder {
+	color: #BABDB7;
+	background: #FFFFFF;
+	box-shadow: none;
+}
+.booking-page-form-btn {
+	font-size: 12px;
+}
+.apply-coupon-modal-body {
+    padding: 70px 50px;
+    padding-top: 20px;
+    width: 100%;
+}
+.success-modal-mark {
+	font-size: 55px;
+	color: #18BC9C;
+	background-color: rgba(24, 188, 156, 0.15);
+	border-radius: 50%;
+	padding: 38px 36px;
+	font-weight: 300;
+}
+.failure-modal-mark {
+	font-size: 55px;
+	color: #EC1B40;;
+	background-color: rgba(236, 27, 64, 0.15);
+	border-radius: 50%;
+	padding: 38px 36px;
+	font-weight: 300;
+}
+.booking-page-choose-project-element {
+	border: 1px dashed #D8D8D4;
+	box-sizing: border-box;
+	box-shadow: 0px 2px 2px rgba(218, 227, 225, 0.1), inset 0px -1px 1px rgba(218, 227, 225, 0.15);
+	border-radius: 4px;
+	text-align: center;
+	color: #747978;
+	padding: 20px 0;
+}
+/*Project Styling*/
+.btn-project-template {
+	background: #FFFFFF;
+	border: 1px solid #EAEAE7;
+	box-sizing: border-box;
+	box-shadow: 0px 2px 2px rgba(218, 227, 225, 0.1), inset 0px -1px 1px rgba(218, 227, 225, 0.15);
+	border-radius: 4px;
+	margin-right: 16px;
+	padding: 16px 24px;
+	width: 100%;
+}
+.btn-project-template:focus {
+	border: 1px solid #18BC9C;
+	box-shadow: none!important;
+	outline: none!important;
+}
+.btn-project-template span {
+	font-size: 20px;
+	color: #18BC9C;
+	padding: 14px;
+	background-color: #E4F4F1;
+	border-radius: 4px;
+}
+.btn-project-template p {
+	font-weight: 600;
+	font-size: 12px;
+	line-height: 16px;
+	color: #747978;
+	margin-bottom: 0;
+	text-align: left;
+}
+.btn-project-template h6 {
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	max-width: 160px;
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 19px;
+	text-align: left;
+	color: #393F3E;
+}
+.btn-concept-select {
+	font-weight: 700;
+	font-size: 12px;
+	line-height: 16px;
+	color: #747978;
+	background: #FFFFFF;
+	border: 1px solid #DAE3E1;
+	box-shadow: 0px 2px 2px rgba(218, 227, 225, 0.1), inset 0px -1px 1px rgba(218, 227, 225, 0.15);
+	border-radius: 4px 0px 0px 4px;
+	padding: 12px 15px;
+}
+.btn-concept-select:focus {
+	color: #393F3E;
+	background: #FFFFFF;
+	border: 1px solid #DAE3E1;
+	box-shadow: none!important;
+	outline: none!important;
+}
+.project-added-service-box {
+	border: 1px solid #EAEAE7;
+	box-sizing: border-box;
+	box-shadow: 0px 2px 2px rgba(218, 227, 225, 0.1), inset 0px -1px 1px rgba(218, 227, 225, 0.15);
+	border-radius: 4px;
+	padding: 24px;
+}
+.project-custom-check-icon span {
+	color: #9AA09E;
+	font-size: 16px;
+}
+.project-custom-check-icon h6 {
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 16px;
+	color: #393F3E;
+	margin-bottom: 5px;
+}
+.project-custom-check-icon p {
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 16px;
+	color: #9AA09E;
+	margin: 0;
+}
+/*Project Styling*/
+/*Payment Styling*/
+/*Radio box*/
+.radio {
+	background: #FFFFFF;
+	border: 1px solid #EAEAE7;
+	box-sizing: border-box;
+	box-shadow: 0px 2px 2px rgba(218, 227, 225, 0.1), inset 0px -1px 1px rgba(218, 227, 225, 0.15);
+	border-radius: 4px;
+	padding: 16px 24px 16px 24px;
+	margin-bottom: 16px;
+}
+.payment-radio-label {
+	font-size: 14px!important;
+	font-weight: 700;
+	line-height: 19px;
+	display: flex;
+	align-items: center;
+	color: #393F3E!important;
+	text-transform: none!important;
+}
+.payment-radio-label img {
+	width: 50px;
+	background-color: #000;
+	border-radius: 4px;
+	padding: 7px 0;
+	margin: 0 20px;
+}
+.cc-icon-payment {
+	color: #18BC9C;
+	padding: 14px 15px;
+	font-size: 20px;
+	background-color: #DDF5F0;
+	border-radius: 4px;
+	margin: 0 20px;
+}
+.payment-radio-label:after {
+    content: '';
+    display: table;
+    clear: both;
+}
+.radio .cr {
+    display: inline-block;
+    border: 1.5px solid #D8D8D4;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    background-color: #fff;
+}
+.radio .cr {
+    border-radius: 50%;
+}
+.radio .cr .cr-icon {
+    position: absolute;
+    line-height: 0;
+    top: 50%;
+    left: 20%;
+    background-color: #fff;
+}
+.radio .cr .cr-icon {
+	border: 1.5px solid #D8D8D4;
+	box-sizing: border-box;
+	box-shadow: 0px 2px 2px rgba(218, 227, 225, 0.1), inset 0px -1px 1px rgba(218, 227, 225, 0.15);
+
+}
+.payment-radio-label input[type="radio"] {
+    display: none;
+}
+.payment-radio-label input[type="radio"] + .cr > .cr-icon {
+    transform: scale(3) rotateZ(-20deg);
+    opacity: 0;
+    transition: all .3s ease-in;
+}
+.payment-radio-label input[type="radio"]:checked + .cr {
+    transform: scale(1) rotateZ(0deg);
+    opacity: 1;
+    border: 6px solid #18BC9C;
+}
+.payment-radio-label input[type="radio"]:disabled + .cr {
+    opacity: .5;
+}
+.save-card-control-label {
+	font-weight: 500!important;
+	font-size: 14px!important;
+	color: #393F3E!important;
+	text-transform: none!important;
+}
+.save-card-switch .custom-control-label::after {
+    top: 1px;
+    left: -35px;
+    width: 15px;
+    height: 15px;
+    background: #FFFFFF;
+    border: 1px solid #D8D8D4;
+    box-sizing: border-box;
+    box-shadow: none;
+    border-radius: .5rem;
+    transition: background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out,-webkit-transform .15s ease-in-out;
+    transition: transform .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    transition: transform .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out,-webkit-transform .15s ease-in-out;
+}
+.payment-check-label {
+	font-weight: 600!important;
+	font-size: 14px!important;
+	line-height: 24px!important;
+	color: #393F3E!important;
+	text-transform: none!important;
+	width: 90%;
+}
+.payment-terms-checkmark {
+    position: absolute;
+    top: 10px;
+    left: 0;
+    height: 23px;
+    width: 23px;
+    background-color: #fff;
+    border: 2px solid #D8D8D4;
+    box-sizing: border-box;
+    box-shadow: 0px 2px 2px rgba(218, 227, 225, 0.1), inset 0px -1px 1px rgba(218, 227, 225, 0.15);
+    border-radius: 4px;
+}
+/*Payment Styling*/
+/*File Upload Styling*/
+
+
+/*File Upload Styling*/
+
+/*Booking Page Left Content Ends*/
 /*Booking Page Styling Section Ends Here*/
 /*Footer Section Starts Here*/
 footer {
