--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 html, body {
 	overflow-x: hidden;
 	font-family: 'Manrope', sans-serif;
-	height: 100%;
+	/*height: 100vh;*/
 	scroll-behavior: smooth;
 }
 * {
